blockrecover工具可以依托pg_basebackup生成的基础备份完成坏块修复（添加-r参数）

--- a/pg_lightool/Makefile
+++ b/pg_lightool/Makefile
@@ -10,7 +10,8 @@ PGFILEDESC = "pg_lightool,my light tools of pg"
 
 PROGRAM = pg_lightool
 SRCS = \
-	pg_lightool.c util.c fileoperat.c xlogparser.c xlogread.c page/pageread.c
+	backup_utils.c pg_lightool.c util.c fileoperat.c xlogparser.c \
+	xlogread.c pageread.c
 OBJS = $(SRCS:.c=.o)
 
 
